# dodge-

./: .gitignore  README.md
godot/: export_presets.cfg  hud.tscn  icon.svg.import  mob.tscn  player.tscn  project.godot  rust.gdextension  rust.gdextension.uid
godot/art/: StandIn_Swordsman_v01.png.import  gameover.wav.import  light.png.import
godot/fireballs/fireball_high_speed_side_small/imgs/: img_0.png.import  img_1.png.import  img_10.png.import  img_11.png.import  img_12.png.import  img_13.png.import  img_14.png.import  img_15.png.import  img_16.png.import  img_17.png.import  img_18.png.import  img_19.png.import  img_2.png.import  img_20.png.import  img_21.png.import  img_22.png.import  img_23.png.import  img_24.png.import  img_25.png.import  img_26.png.import  img_27.png.import  img_28.png.import  img_29.png.import  img_3.png.import  img_30.png.import  img_31.png.import  img_32.png.import  img_33.png.import  img_34.png.import  img_35.png.import  img_36.png.import  img_37.png.import  img_38.png.import  img_39.png.import  img_4.png.import  img_5.png.import  img_6.png.import  (+3 more)
godot/fonts/: Xolonium-Regular.ttf.import
godot/sounds/: fire1.mp3.import  fire2.mp3.import  fire3.mp3.import  fire4.mp3.import  fire5.mp3.import  nintendo-game-boy-startup.mp3.import  score10.mp3.import  score20.mp3.import  score25.mp3.import  score35.mp3.import  score5.mp3.import  score50.mp3.import  soundtrack.mp3.import
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: game.rs  hud.rs  lib.rs  mob.rs  player.rs
web/: index.html  index.manifest.json  index.service.worker.js
